--- a/package.json
+++ b/package.json
@@ -18,12 +18,17 @@
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
     "live-server": "^1.2.1",
+    "node-sass": "^4.14.1",
     "react": "16.0.0",
-    "react-dom": "16.0.0",
-    "react-modal": "2.2.2",
+    "react-dom": "^16.13.1",
+    "react-modal": "^3.11.2",
+    "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
     "validator": "8.0.0",
-    "webpack": "3.1.0",
-    "webpack-dev-server": "2.5.1"
+    "webpack": "4.2.0",
+    "webpack-dev-server": "3.3.0"
+  },
+  "devDependencies": {
+    "webpack-cli": "^3.3.12"
   }
 }
