--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "css-loader": "0.28.4",
     "live-server": "^1.2.1",
     "node-sass": "^4.14.1",
+    "normalize.css": "8.0.1",
     "react": "16.0.0",
     "react-dom": "^16.13.1",
     "react-modal": "^3.11.2",
